# WorkFlowTool

./: .gitignore  README.md  build.gradle.kts  local.properties  optimize.md  plan.md  plan2.md  settings.gradle.kts
native/cpp_detector/: CMakeLists.txt
native/cpp_detector/src/: cpp_detector.cpp  detector_backend.h  detector_backend_builtin.cpp  detector_backend_opencv.cpp
python_detector/: README.md  bootstrap_seed_models.py  detect_icons.py  make_training_set.py  offline_common.py  requirements.txt  seed_image_annotations.py  seed_images_manifest.txt  train_background_model.py  train_icon_detector.py  train_magic_model.py
python_detector/model/background/: model.json
python_detector/model/combined/: model.json  training_manifest.json
python_detector/model/combined/runs/: args.yaml  results.csv
python_detector/model/combined/yolo_dataset/: dataset.yaml
python_detector/model/combined/yolo_dataset/labels/: train.cache
python_detector/model/combined/yolo_dataset/labels/train/: image_0001.txt  image_0002.txt  image_0003.txt
python_detector/model/magic/: model.json
python_detector/model/test_actions/: training_manifest.json
python_detector/seed_images/open_icon_samples/: README.md
python_detector/tests/: test_detect_icons.py  test_seed_image_annotations.py
python_detector/training_sets/background_seed/: annotations.jsonl
python_detector/training_sets/combined/: annotations.jsonl
python_detector/training_sets/magic_seed/: annotations.jsonl
python_detector/training_sets/seed_pretrain/: annotations.jsonl
python_detector/training_sets/test_actions/: annotations.jsonl
scripts/: prepare_offline_runtime.py
src/main/kotlin/io/github/workflowtool/: Main.kt
src/main/kotlin/io/github/workflowtool/application/: AppController.kt  AppControllerFiles.kt  AppControllerRegions.kt  AppControllerSettings.kt  AppControllerSupport.kt  AppControllerTraining.kt  AppControllerViewport.kt  AppInfrastructure.kt  AppRuntimeFiles.kt  AppSettingsStore.kt  BackgroundColorModel.kt  DefaultLocalizationProvider.kt  DetectionPostProcessor.kt  LearningConfig.kt  MagicSelection.kt  MagicToleranceModel.kt  ModelEvolutionPreview.kt  ModelEvolutionStore.kt  NativeDetectorAbi.kt  NativeDetectorBridge.kt  NativeDetectorMapping.kt  NativeDetectorStructures.kt  PythonDetectorBridge.kt  PythonEnvironmentManager.kt  PythonRuntime.kt  SimpleJson.kt  WorkspaceHistoryStore.kt
src/main/kotlin/io/github/workflowtool/core/: GridSplitter.kt  IconDetector.kt  IconExporter.kt
src/main/kotlin/io/github/workflowtool/domain/: Services.kt
src/main/kotlin/io/github/workflowtool/model/: Models.kt  RegionGrouping.kt  SelectionMasks.kt
src/main/kotlin/io/github/workflowtool/platform/: DesktopPlatform.kt
src/main/kotlin/io/github/workflowtool/ui/: AppScreen.kt  InputModifiers.kt
src/main/kotlin/io/github/workflowtool/ui/components/: Controls.kt
src/main/kotlin/io/github/workflowtool/ui/editor/: EditorCanvas.kt  EditorDrawing.kt  EditorGeometry.kt  EditorOverlays.kt
src/main/kotlin/io/github/workflowtool/ui/panels/: AdvancedSettingsDialog.kt  HistoryDialog.kt  LogPanel.kt  Panels.kt  RegionPanels.kt  RegionPreviewDialog.kt  Toolbar.kt
src/main/kotlin/io/github/workflowtool/ui/theme/: UiTokens.kt
src/main/kotlin/io/github/workflowtool/ui/window/: WindowFrame.kt
src/test/kotlin/io/github/workflowtool/application/: AppControllerSupportTest.kt  AppControllerTest.kt  DetectionPostProcessorTest.kt  NativeDetectorBridgeTest.kt  PythonDetectorBridgeTest.kt
src/test/kotlin/io/github/workflowtool/core/: GridSplitterTest.kt  IconDetectorTest.kt  IconExporterTest.kt
src/test/kotlin/io/github/workflowtool/ui/editor/: EditorGeometryTest.kt
