cmake_minimum_required(VERSION 3.20)
project(workflowtool_cpp_detector LANGUAGES CXX)

include(FetchContent)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_VISIBILITY_PRESET hidden)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/release)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/release)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/release)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/release)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/release)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/release)

option(CPP_DETECTOR_ENABLE_OPENCV "Use OpenCV backend when available" ON)
option(CPP_DETECTOR_FETCH_OPENCV "Download and build bundled OpenCV when local/system OpenCV is unavailable" OFF)
set(CPP_DETECTOR_OPENCV_VERSION "4.13.0" CACHE STRING "Bundled OpenCV version")
set(CPP_DETECTOR_OPENCV_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/third_party/opencv" CACHE PATH "Bundled OpenCV source directory")

set(CPP_DETECTOR_SOURCES
    src/cpp_detector.cpp
    src/detector_backend_builtin.cpp
)

function(workflowtool_configure_embedded_opencv)
    set(BUILD_LIST core,imgproc CACHE STRING "" FORCE)
    set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
    set(BUILD_TESTS OFF CACHE BOOL "" FORCE)
    set(BUILD_PERF_TESTS OFF CACHE BOOL "" FORCE)
    set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
    set(BUILD_opencv_apps OFF CACHE BOOL "" FORCE)
    set(BUILD_DOCS OFF CACHE BOOL "" FORCE)
    set(BUILD_JAVA OFF CACHE BOOL "" FORCE)
    set(BUILD_ANDROID_PROJECTS OFF CACHE BOOL "" FORCE)
    set(BUILD_ANDROID_EXAMPLES OFF CACHE BOOL "" FORCE)
    set(BUILD_FAT_JAVA_LIB OFF CACHE BOOL "" FORCE)
    set(BUILD_opencv_world OFF CACHE BOOL "" FORCE)
    set(BUILD_opencv_python2 OFF CACHE BOOL "" FORCE)
    set(BUILD_opencv_python3 OFF CACHE BOOL "" FORCE)
    set(OPENCV_PYTHON_SKIP_DETECTION ON CACHE BOOL "" FORCE)
    set(WITH_IPP OFF CACHE BOOL "" FORCE)
    set(WITH_FFMPEG OFF CACHE BOOL "" FORCE)
    set(WITH_GSTREAMER OFF CACHE BOOL "" FORCE)
    set(WITH_MSMF OFF CACHE BOOL "" FORCE)
    set(WITH_AVIF OFF CACHE BOOL "" FORCE)
    set(WITH_OPENJPEG OFF CACHE BOOL "" FORCE)
    set(WITH_OPENEXR OFF CACHE BOOL "" FORCE)
    set(WITH_JASPER OFF CACHE BOOL "" FORCE)
    set(WITH_1394 OFF CACHE BOOL "" FORCE)
    set(WITH_VTK OFF CACHE BOOL "" FORCE)
endfunction()

add_library(cpp_detector SHARED ${CPP_DETECTOR_SOURCES})
target_include_directories(cpp_detector PRIVATE src)

if (CPP_DETECTOR_ENABLE_OPENCV)
    if (EXISTS "${CPP_DETECTOR_OPENCV_SOURCE_DIR}/CMakeLists.txt")
        message(STATUS "workflowtool_cpp_detector: using bundled OpenCV source at ${CPP_DETECTOR_OPENCV_SOURCE_DIR}")
        workflowtool_configure_embedded_opencv()
        add_subdirectory("${CPP_DETECTOR_OPENCV_SOURCE_DIR}" "${CMAKE_BINARY_DIR}/opencv" EXCLUDE_FROM_ALL)
        set(OpenCV_FOUND TRUE)
        set(OpenCV_LIBS opencv_core opencv_imgproc)
        set(OpenCV_INCLUDE_DIRS "${CPP_DETECTOR_OPENCV_SOURCE_DIR}/include")
    elseif (CPP_DETECTOR_FETCH_OPENCV)
        message(STATUS "workflowtool_cpp_detector: fetching bundled OpenCV ${CPP_DETECTOR_OPENCV_VERSION}")
        workflowtool_configure_embedded_opencv()
        FetchContent_Declare(
            opencv
            URL "https://github.com/opencv/opencv/archive/${CPP_DETECTOR_OPENCV_VERSION}.zip"
            DOWNLOAD_EXTRACT_TIMESTAMP TRUE
        )
        FetchContent_MakeAvailable(opencv)
        set(OpenCV_FOUND TRUE)
        set(OpenCV_LIBS opencv_core opencv_imgproc)
        set(OpenCV_INCLUDE_DIRS "${opencv_SOURCE_DIR}/include")
    else()
        find_package(OpenCV QUIET COMPONENTS core imgproc)
    endif()

    if (OpenCV_FOUND)
        message(STATUS "workflowtool_cpp_detector: using OpenCV backend")
        target_sources(cpp_detector PRIVATE src/detector_backend_opencv.cpp)
        target_compile_definitions(cpp_detector PRIVATE CPP_DETECTOR_USE_OPENCV=1)
        target_include_directories(cpp_detector PRIVATE ${OpenCV_INCLUDE_DIRS})
        target_link_libraries(cpp_detector PRIVATE ${OpenCV_LIBS})
    else()
        message(STATUS "workflowtool_cpp_detector: OpenCV not found, using built-in backend")
    endif()
endif()

if (WIN32)
    target_compile_definitions(cpp_detector PRIVATE CPP_DETECTOR_EXPORTS)
endif()
